# audio-xdc

./: .gitignore  CMakeLists.txt  Image.qrc  Main.qml  README.md  Theme.qml  main.cpp  qmldir
code/core/: Command.cpp  Command.h  HostController.cpp  HostController.h  HostManager 数据路由完整结构图.md  HostManager.cpp  HostManager.h  HostManager_优化记录.txt  HostManager_流程图.txt  MeetingManager.cpp  MeetingManager.h  MeetingManager设计概要.md  ProtocolProcessor.cpp  ProtocolProcessor.h  UnitModel.cpp  UnitModel.h  Unitmodel设计规范.md  afhController.cpp  afhController.h  xdcController 函数结构.xlsx  xdcController 函数结构图.txt  xdcController.cpp  xdcController.h  xdcController.md
code/hardware/: BluetoothAdapter.h  ConnectionAdapter.cpp  ConnectionAdapter.h  ConnectionFactory.cpp  ConnectionFactory.h  SerialPortAdapter.cpp  SerialPortAdapter.h  TCPSocketAdapter.cpp  TCPSocketAdapter.h
data/: meeting_data.json
qml/: Host_detecting.txt  TestCharts.qml  app_help.qml  app_logs.qml  app_logs_test.qml  app_settings.qml  host_connection.qml  host_detecting.qml  host_detection.qml  host_info_ds.qml  host_info_xdc.qml  host_rssi_ds.qml  host_rssi_xdc.qml  host_settings_ds.qml  host_settings_xdc.qml  host_unit_xdc.qml  meeting_active.qml  meeting_calendar.qml  meeting_checkin.qml  meeting_console.qml  meeting_management.qml  meeting_voting.qml  startup_product.qml
qml/CustomWidget/: CustomAFHUnit.qml  CustomButton.qml  CustomCheckBox.qml  CustomCombox.qml  CustomDatetimePicker.qml  CustomHostCard.qml  CustomHostUnit.qml  CustomIcon.qml  CustomMeetingRecord.qml  CustomMultipleCheckBox.qml  CustomRadioButton.qml  CustomRectangle.qml  CustomSlider.qml  CustomSpin.qml  CustomTextField.qml  CustomTimeLine.qml  CustomTreeMenu.qml  CustomTreeMenuData.qml  CustomUnitCard.qml  CustomUnitDetailPanel.qml  PanelCreateCheckin.qml  PanelCreateMeeting.qml  PanelCreateVoting.qml  PanelViewMeeting.qml  SystemArchitecture.qml
temp/: CustomDateTimePickerDialog.qml  HostController.cpp  HostController.h  Host_Setting.qml  MeetingManager.cpp  MeetingManager.h  中控RS485通讯协1.5.docx  跳频系统RS485通讯协1.0.docx
